remove card overflow, prevents drop-shadow on safari

--- a/src/styles/tailwind.scss
+++ b/src/styles/tailwind.scss
@@ -48,7 +48,7 @@
   }
 
   .card {
-    @apply overflow-hidden rounded-sm bg-white drop-shadow;
+    @apply rounded-sm bg-white drop-shadow;
 
     &--hover {
       @apply duration-200 hover:drop-shadow-md;
